# chat-server

./: README.md
chat-go/: CLAUDE.md  Makefile  go.mod
chat-go/cmd/client/: main.go
chat-go/cmd/server/: main.go
chat-go/data/: messages.json
chat-go/internal/protocol/: protocol.go
chat-go/internal/server/: client.go  hub.go  server.go
chat-go/internal/store/: store.go
chat-rust/: CLAUDE.md  Cargo.toml  Makefile
chat-rust/data/: messages.json  users.json
chat-rust/src/: lib.rs  protocol.rs  store.rs
chat-rust/src/server/: hub.rs  mod.rs
